--- a/dfs/2.html
+++ b/dfs/2.html
@@ -14,11 +14,14 @@
 
         function DFS(v) {
           if (v === n + 1) {
-            let tmp = "";
-            for (let i = 0; i <= n; i++) {
-              if (chkArr[i] === 1) tmp += i + " ";
-            }
-            if (tmp.length) console.log(tmp.trim());
+            let res = chkArr.reduce((acc, cur, idx) => {
+              if (cur === 1) {
+                return (acc += idx + " ");
+              }
+              return acc;
+            }, initialValue);
+            if (res) console.log(res);
+            return;
           } else {
             chkArr[v] = 1;
             DFS(v + 1);
@@ -28,7 +31,6 @@
         }
 
         DFS(1);
-        console.log(answer);
       }
 
       console.log(solution(3));
