chore: 구조분해 이용해 값 변경하기

--- a/sort/1.html
+++ b/sort/1.html
@@ -19,9 +19,10 @@
             }
           }
 
-          temp = arr[idx];
-          arr[idx] = arr[i];
-          arr[i] = temp;
+          [arr[i], arr[idx]] = [arr[idx], arr[i]];
+          //   temp = arr[idx];
+          //   arr[idx] = arr[i];
+          //   arr[i] = temp;
         }
 
         return arr;
