--- a/sort/3.html
+++ b/sort/3.html
@@ -12,24 +12,9 @@
 
         for (let i = 0; i < count - 1; i++) {
           for (let j = 0; j < count - i - 1; j++) {
-            if (arr[j] > arr[j + 1]) {
+            if (arr[j] > arr[j + 1] && (arr[j] > 0 || arr[j + 1] > 0)) {
               [arr[j], arr[j + 1]] = [arr[j + 1], arr[j]];
             }
-          }
-        }
-
-        for (let i = 0; i < count; i++) {
-          idx = i;
-          if (arr[i] > 0 || arr[i + 1] > 0) break;
-          for (let j = 1; j < count; j++) {
-            if (arr[j - 1] > 0 || arr[j] > 0) break;
-            if (arr[j - 1] < 0 && arr[j] < 0) {
-              if (arr[j - 1] < arr[j]) {
-                idx = j;
-              }
-            }
-
-            [arr[i], arr[idx]] = [arr[idx], arr[i]];
           }
         }
 
