--- a/sort/3.html
+++ b/sort/3.html
@@ -12,7 +12,7 @@
 
         for (let i = 0; i < count - 1; i++) {
           for (let j = 0; j < count - i - 1; j++) {
-            if (arr[j] > arr[j + 1] && (arr[j] > 0 || arr[j + 1] > 0)) {
+            if (arr[j] > arr[j + 1] && arr[j] > 0 && arr[j + 1] < 0) {
               [arr[j], arr[j + 1]] = [arr[j + 1], arr[j]];
             }
           }
@@ -21,7 +21,7 @@
         return arr;
       }
 
-      console.log(solution([1, 2, 3, -3, -2, 5, 6, -6]));
+      console.log(solution([1, 2, 3, -3, 7, -2, 6, 5, -6, -1]));
     </script>
   </body>
 </html>
